--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   pgdb:
-    image: postgres:13-alpine
+    image: postgres
     container_name: pgdb
     env_file:
       - .env
